--- a/Css/style.css
+++ b/Css/style.css
@@ -18,7 +18,7 @@ body {
     background: rgba(255, 255, 255, 0.2); /* Fundo branco com transparência */
     backdrop-filter: blur(10px); /* Aplica o efeito de desfoque */
     width: 220px;
-    height: 330px;
+    height: 360px;
     padding: 18px;
     top: 50%;
     left: 50%;
@@ -40,7 +40,16 @@ input {
     margin: auto;
     display: block;
     width: 95%;
+    margin-bottom: 6px;
 }
+
+#apagar {
+    border-radius: 10px;
+    padding: 8px;
+    margin: auto;
+    display: block;
+    width: 95%;    
+} 
 
 #cadastro, h1 {
   color: white;
@@ -54,4 +63,9 @@ input, p {
 #cadastrar:hover {
    background-color: black;
    color: white;
+} 
+
+#apagar:hover {
+    background-color: black;
+    color: white;
 }
